# AI-ChatBot-Summarizer

./: README.md
Ai-Chatbot-Summariser-master/: app.py  pyproject.toml  requirements.txt  summarizer_module.py
Ai-Chatbot-Summariser-master/UI/: chat_interface.py  sidebar.py
Ai-Chatbot-Summariser-master/api/: api_endpoint.py
Ai-Chatbot-Summariser-master/data/: embedding_service.py  vector_store_service.py
