[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
langchain = ">=0.3.26,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
streamlit = ">=1.46.1,<2.0.0"
requests = ">=2.32.4,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
sentence-transformers = ">=5.0.0,<6.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
faiss-cpu = ">=1.11.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
